--- a/Lab_3/style.css
+++ b/Lab_3/style.css
@@ -35,14 +35,14 @@ h1{
 }
 
 .caption-1{
-    background-color:darkgoldenrod;
+    background-color:cornflowerblue;
 }
 .caption-2{
-    background-color:blueviolet;
+    background-color:midnightblue;
     color: white;
 }
 .caption-3{
-    background-color:burlywood;
+    background-color:gold;
 }
 
 
